modules/gdscript/tests/scripts/runtime/errors/global_class_1.notest.gd
class_name GlobalClass1 extends GlobalBase
